Añadir RabbitMQ funcionando