@@ -2,29 +2,28 @@ package com.icesi.microservicio_miembro;
 
 import com.icesi.microservicio_miembro.model.Miembro;
 import com.icesi.microservicio_miembro.repository.MiembroRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
-import org.springframework.stereotype.Component;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
 
 import java.time.LocalDate;
-import java.util.Arrays;
+import java.util.List;
 
-@Component
-public class DataLoader implements CommandLineRunner {
+@Configuration
+public class DataLoader {
 
-    @Autowired
-    private MiembroRepository miembroRepository;
-
-    @Override
-    public void run(String... args) throws Exception {
-        // Crear algunos miembros de ejemplo sin 'id'
-        Miembro miembro1 = new Miembro("Juan Pérez", "juan.perez@example.com", LocalDate.of(2023, 1, 15));
-        Miembro miembro2 = new Miembro("María González", "maria.gonzalez@example.com", LocalDate.of(2022, 5, 20));
-        Miembro miembro3 = new Miembro("Carlos Ramírez", "carlos.ramirez@example.com", LocalDate.of(2021, 10, 10));
-
-        // Guardar los miembros en la base de datos
-        miembroRepository.saveAll(Arrays.asList(miembro1, miembro2, miembro3));
-
-        System.out.println("Datos de miembros de ejemplo cargados exitosamente.");
+    @Bean
+    CommandLineRunner initDatabase(MiembroRepository miembroRepository) {
+        return args -> {
+            if (miembroRepository.count() == 0) { // Verificar si la BD ya tiene datos
+                List<Miembro> miembros = List.of(
+                        new Miembro(null, "Juan Pérez", "juan.perez@example.com", LocalDate.of(2023, 1, 15)),
+                        new Miembro(null, "María González", "maria.gonzalez@example.com", LocalDate.of(2022, 5, 10)),
+                        new Miembro(null, "Carlos Ramírez", "carlos.ramirez@example.com", LocalDate.of(2021, 8, 20))
+                );
+                miembroRepository.saveAll(miembros);
+                System.out.println("Datos de miembros iniciales cargados");
+            }
+        };
     }
 }
